# nnvis

./: .gitignore  AGENTS.md  CHANGELOG.md  app.js  download.py  extract.py  index.html  requirements.txt  styles.css  torch_export.py
mock/: model_summary.json
rust/: Cargo.toml
rust/nnvis-core/: Cargo.toml  build.rs
rust/nnvis-core/schema/: model_bundle.fbs
rust/nnvis-core/src/: lib.rs
rust/nnvis-preprocess/: Cargo.toml  build.rs  test_output.nnvis
rust/nnvis-preprocess/src/: config_parser.rs  grouped_graph.rs  layer_assignment.rs  main.rs  onnx_parser.rs  onnx_proto.rs  safetensors_parser.rs
rust/nnvis-renderer/: Cargo.toml
rust/nnvis-renderer/src/: lib.rs
