[package]
name = "nnvis-renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nnvis-core = { path = "../nnvis-core" }
flatbuffers = "25.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
# Optimise WASM output size.
opt-level = "z"
lto = true
